--- a/.env
+++ b/.env
@@ -18,3 +18,16 @@
 APP_ENV=dev
 APP_SECRET=40b725d84b205414b2abc1556c76e521
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/aaxis_test"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+###< doctrine/doctrine-bundle ###
+
+###> Default Time Zone ###
+APP_TIMEZONE=America/Argentina/Buenos_Aires
+###> Default Time Zone ###
