--- a/.env
+++ b/.env
@@ -24,8 +24,8 @@ APP_SECRET=40b725d84b205414b2abc1556c76e521
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/aaxis_test"
-# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+# DATABASE_URL="mysql://root:@127.0.0.1:3306/aaxis_test"
+DATABASE_URL="postgresql://postgres:postgres@127.0.0.1:5432/aaxis_test?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> Default Time Zone ###
